--- a/ios/iginitefleet/SplashScreen.storyboard
+++ b/ios/iginitefleet/SplashScreen.storyboard
@@ -28,7 +28,6 @@
                             <constraint firstItem="EXPO-SplashScreen" firstAttribute="bottom" secondItem="EXPO-ContainerView" secondAttribute="bottom" id="d6a0be88096b36fb132659aa90203d39139deda9"/>
                         </constraints>
                         <color key="backgroundColor" name="SplashScreenBackground"/>
-                        <color key="backgroundColor" name="SplashScreenBackground"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EXPO-PLACEHOLDER-1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -37,10 +36,8 @@
         </scene>
     </scenes>
     <resources>
+        <image name="SplashScreen" width="414" height="736"/>
         <image name="SplashScreenLogo" width="414" height="736"/>
-        <namedColor name="SplashScreenBackground">
-            <color alpha="1.000" blue="0.141176470588235" green="0.125490196078431" red="0.125490196078431" customColorSpace="sRGB" colorSpace="custom"/>
-        </namedColor>
         <namedColor name="SplashScreenBackground">
             <color alpha="1.000" blue="0.141176470588235" green="0.125490196078431" red="0.125490196078431" customColorSpace="sRGB" colorSpace="custom"/>
         </namedColor>
